fix overlap with lettering

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,7 @@ h2 {
 .expl-headers {
     width: 100%;
     height: 40px;
-    padding-bottom: 15px;
+    padding: 0 0 17px 10px;
     border-bottom: 10px solid #bb9a83;
     margin-top: 50px;
 }
